[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/ui/dummy_right.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/ui/dummy_shad.png" type="Texture" id=2]
[ext_resource path="res://ui/setup/components/dummy/Player_No_Dummy.gd" type="Script" id=3]
[ext_resource path="res://ui/theme/main.theme" type="Theme" id=4]
[ext_resource path="res://assets/textures/ui/arrow_6x4.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/ui/dummy_hit.mp3" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 9.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 12 )

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -39, -48 ), Vector2( -39, -49 ), Vector2( -39, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -31 ), Vector2( 0, -32 ) ]
}

[node name="Player_No_Dummy" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( -2, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DummyBox" type="Area2D" parent="."]
position = Vector2( 0, -12 )

[node name="Shape" type="CollisionShape2D" parent="DummyBox"]
shape = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 0, -13 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = -39.0
margin_top = -48.0
margin_right = 39.0
margin_bottom = -35.0
theme = ExtResource( 4 )
custom_constants/line_spacing = -2
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickArea" type="Panel" parent="."]
margin_left = -9.0
margin_top = -25.0
margin_right = 9.0
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Game_SFX"

[connection signal="area_entered" from="DummyBox" to="." method="_on_DummyBox_area_entered"]
[connection signal="gui_input" from="ClickArea" to="." method="_on_ClickArea_gui_input"]
